feat: ability to query sinks based on pattern layout instead of pattern